--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     <a href="https://github.com/samim0088/" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
     &nbsp
     <a href="mailto:samim.hossain.net@gmail.com" style="color: white;"><i class="fas fa-envelope-square" style="font-size: 2em;"></i></a>
+    &nbsp
+    <a href="https://www.pinterest.com/samimriya/" style="color: white;"><i class="fa fa-pinterest" style="font-size: 2em;"></i></a>
+    &nbsp
+    <a href="https://twitter.com/Samimho30394308" style="color: white;"><i class="fab fa-twitter" style="font-size: 2em;"></i></a>
+    &nbsp
+    <a href="https://www.instagram.com/exticsamim121/" style="color: white;"><i class="fab fa-instagram" style="font-size: 2em;"></i></a>
   </div>
 </div>
 
