--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     &nbsp
     <a href="mailto:samim.hossain.net@gmail.com" style="color: white;"><i class="fas fa-envelope-square" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="https://www.pinterest.com/samimriya/" style="color: white;"><i class="fa fa-pinterest" style="font-size: 2em;"></i></a>
+    <a href="https://www.pinterest.com/samimriya/" style="color: white;"><i class="fab fa-pinterest" style="font-size: 2em;"></i></a>
     &nbsp
     <a href="https://twitter.com/Samimho30394308" style="color: white;"><i class="fab fa-twitter" style="font-size: 2em;"></i></a>
     &nbsp
